# Whitebox-crypto-AES

./: CMakeLists.txt  WBAES.cpp  WBAES.h  base.h  my_wbaes.cpp  my_wbaes.h  mymain.cpp
build_android/: build_android.sh  install_android.sh
my_build/: build.sh  install_android.sh
